[package]
name = "radix-sort"
version = "0.1.0"
authors = ["Mick van Gelderen <mickvangelderen@gmail.com>"]
edition = "2018"

# See more keys and their definitions at https://doc.rust-lang.org/cargo/reference/manifest.html

[dependencies]
rand = "0.7.0"
toml = "0.5.1"
serde = { version = "1.0.94", features = ["derive"] }